--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="index-2.html" class="navbar-brand logodefault"><img id="logo"
+                                        <a href="#" class="navbar-brand logodefault"><img id="logo"
                                                 src="img/logos/logo.png" alt="logo" /></a>
                                         <!-- end logo -->
                                     </div>
