Change Services Part

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="content-management.html" class="text-white">Technical
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">Technical
                                             Consulting</a></h3>
                                     <p class="mb-3 text-white opacity7">Experience expert technical consulting services
                                         with us. Our team provides insightful guidance and solutions to enhance your
@@ -286,7 +286,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="information-security.html" class="text-white">Website
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">Website
                                             Development</a></h3>
                                     <p class="mb-3 text-white opacity7">We leverage long-standing experience in building
                                         and offering custom web application helping you implement the right technologies
@@ -304,7 +304,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="mobile-platforms.html" class="text-white">Mobile App
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">Mobile App
                                             Development</a></h3>
                                     <p class="mb-3 text-white opacity7">We provide complete Custom mobile application
                                         development design, integration, and management services. Hire our experienced
@@ -322,7 +322,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="mobile-platforms.html" class="text-white">SAP
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">SAP
                                             Development</a></h3>
                                     <p class="mb-3 text-white opacity7">We offer captivating templates, harmonious color
                                         schemes, and user-friendly, elegant designs that empower your vision to
@@ -340,7 +340,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="mobile-platforms.html" class="text-white">CRM
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">CRM
                                             Development</a></h3>
                                     <p class="mb-3 text-white opacity7">
                                         Unlock the potential of your customer relationships with our CRM development.
@@ -358,7 +358,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="data-synchronization.html" class="text-white">UI/UX
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">UI/UX
                                             Design</a></h3>
                                     <p class="mb-3 text-white opacity7">We provide an eye catchy template, Great
                                         combinations of colors, user friendly simpler yet superior designs that make
@@ -376,7 +376,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="data-synchronization.html" class="text-white">Graphics
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">Graphics
                                             Design</a></h3>
                                     <p class="mb-3 text-white opacity7">
                                         Elevate your brand through our compelling logo, brochure, and catalogue designs.
@@ -395,7 +395,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="process-automation.html" class="text-white">Game
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">Game
                                             Development</a></h3>
                                     <p class="mb-3 text-white opacity7">We develop addictive, attractive, mass appealed
                                         games that can run on the highways of smart phones, laptops, pads, TVs, and
@@ -413,7 +413,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="event-processing.html" class="text-white">Digital
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">Digital
                                             Marketing</a></h3>
                                     <p class="mb-3 text-white opacity7">Let's make your visibility in the high tide of
                                         digital ocean. Tell your customers and subscribers about your presence with
@@ -431,7 +431,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="event-processing.html" class="text-white">Social Media
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">Social Media
                                             Marketing</a></h3>
                                     <p class="mb-3 text-white opacity7">
                                         Harness the power of social media with our expert marketing strategies. We
@@ -451,7 +451,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3 ms-lg-4">
-                                    <h3 class="h5 mb-3"><a href="content-management.html" class="text-white">SEO /
+                                    <h3 class="h5 mb-3"><a href="#" class="text-white">SEO /
                                             ASO</a></h3>
                                     <p class="mb-3 text-white opacity7">In order to cater larger potentials and
                                         audiences, SEO is one of the most useful tricks available here. Trust our
