--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                                         solution should be nominated for service of the year. I made back the purchase
                                         price in just 48 hours!</p>
                                     <h4 class="h5 mb-0 text-primary">Tyson Perivolaris</h4>
-                                    <p class="mb-0 text-white">Intranet Developer</p>
+                                    <p class="mb-0 text-white">CEO</p>
                                 </div>
                                 <div class="position-relative mt-4">
                                     <img src="img/avatars/avatar-02.jpg" class="rounded-circle mb-3" alt="...">
@@ -655,7 +655,7 @@
                                         love your system. It's exactly what I've been looking for. I love business. It
                                         really saves me time and effort.</p>
                                     <h4 class="h5 mb-0 text-primary">Gemma Krischock</h4>
-                                    <p class="mb-0 text-white">Web Designer</p>
+                                    <p class="mb-0 text-white">CTO</p>
                                 </div>
                                 <div class="position-relative mt-4">
                                     <img src="img/avatars/avatar-03.jpg" class="rounded-circle mb-3" alt="...">
@@ -664,7 +664,7 @@
                                         Absolutely wonderful! It really saves me time and effort. business is exactly
                                         what our business has been lacking.</p>
                                     <h4 class="h5 mb-0 text-primary">Daniel Hester</h4>
-                                    <p class="mb-0 text-white">Web Developer</p>
+                                    <p class="mb-0 text-white">COO</p>
                                 </div>
                             </div>
                             <h6 class="testimonial-quote">“</h6>
